fix(Leaderboard): adjust height when table is collapsed on small screens

--- a/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
+++ b/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
@@ -51,9 +51,15 @@
   }
 }
 
-@media (max-width: 472px) {
+@include m.small {
   .leaderboardWrapper.collapse {
-    height: 160px;
+    height: 180px;
+  }
+}
+
+@media (max-width: 480px) {
+  .leaderboardWrapper.collapse {
+    height: 220px;
   }
 }
 
